<resources>
    <string name="app_name">U-Fit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">U-Fit</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Strings for the Create Workout Fragment -->
    <string name="create_workout_title">Create Workout</string>
    <string name="create_workout_exercise_properties">Exercise Properties</string>
    <string name="create_workout_name">Workout Name:</string>
    <string name="create_workout_exercise_name">Exercise Name:</string>
    <string name="create_workout_reps">Reps:</string>
    <string name="create_workout_sets">Sets:</string>
    <string name="create_workout_weight">Weight:</string>
    <string name="no_exercise">Please add an exercise and create your custom workout!</string>

    <!-- Strings for the Profile Fragment -->
    <string name="profile_user_photo">User Photo</string>
    <string name="profile_user_name">User Name</string>
    <string name="profile_bio">Bio</string>
    <string name="profile_age">Age:</string>
    <string name="profile_gender">Gender:</string>
    <string name="profile_height">Height:</string>
    <string name="profile_weight">Weight:</string>
    <string name="profile_measurements">Measurements</string>
    <string name="profile_neck">Neck:</string>
    <string name="profile_chest">Chest:</string>
    <string name="profile_waist">Waist:</string>
    <string name="profile_hips">Hips:</string>

    <!-- Strings for the My Workouts Fragment -->
    <string name="my_workouts_title">My Workouts</string>

    <!-- Strings for the Stats Fragment -->
    <string name="stats_weight_progression"> Weight Progression</string>
    <string name="stats_reps_progression"> Reps Progression</string>
    <string name="stats_sets_progression"> Sets Progression</string>

    <!-- Strings for the Perform Workout Activity -->
    <string name="rest">Rest Timers</string>
    <string name="cancel_rest">Cancel Rest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="workouts_array">
        <item>Bench Press</item>
        <item>Squat</item>
        <item>Deadlift</item>
        <item>Overhead Press</item>
    </string-array>

</resources>
