<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/userPhoto"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/profile_user_photo"
        android:padding="10dp"
        android:src="@drawable/u_fit_logo"  />

    <EditText
        android:id="@+id/userName_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_user_name"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/profile_user_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:stretchColumns="2">

                <TextView
                    android:text="@string/profile_bio"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLightBlue"
                    android:textSize="20sp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"/>

                <TableRow
                    android:background="@color/colorDarkBlue"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:text="@string/profile_age"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1" />

                    <EditText
                        android:id="@+id/age_edit_text"
                        android:textSize="18sp"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="100dp"
                        android:layout_column="2"/>
                </TableRow>

                <TableRow
                    android:background="@color/colorDarkBlue"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:text="@string/profile_gender"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1" />

                    <EditText
                        android:id="@+id/gender_edit_text"
                        android:textSize="18sp"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="100dp"
                        android:layout_column="2"/>
                </TableRow>

                <TableRow
                    android:background="@color/colorDarkBlue"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:text="@string/profile_height"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1" />

                    <EditText
                        android:id="@+id/height_edit_text"
                        android:textSize="18sp"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="100dp"
                        android:layout_column="2"/>
                </TableRow>

                <TableRow
                    android:background="@color/colorDarkBlue"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:text="@string/profile_weight"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1" />

                    <EditText
                        android:id="@+id/weight_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="100dp"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:layout_column="2"/>
                </TableRow>
            </TableLayout>

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="2">

                <TextView
                    android:text="@string/profile_measurements"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLightBlue"
                    android:textSize="20sp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"/>

                <TableRow
                    android:background="@color/colorDarkBlue"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:text="@string/profile_neck"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1" />

                    <EditText
                        android:id="@+id/neck_edit_text"
                        android:textSize="18sp"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="100dp"
                        android:stretchColumns="2"/>
                </TableRow>

                <TableRow
                    android:background="@color/colorDarkBlue"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:text="@string/profile_chest"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1" />

                    <EditText
                        android:id="@+id/chest_edit_text"
                        android:textSize="18sp"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="100dp"
                        android:stretchColumns="2"/>
                </TableRow>

                <TableRow
                    android:background="@color/colorDarkBlue"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:text="@string/profile_waist"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1" />

                    <EditText
                        android:id="@+id/waist_edit_text"
                        android:textSize="18sp"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="100dp"
                        android:stretchColumns="2"/>
                </TableRow>

                <TableRow
                    android:background="@color/colorDarkBlue"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:text="@string/profile_hips"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1" />

                    <EditText
                        android:id="@+id/hips_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="100dp"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        android:stretchColumns="2"/>
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSilver"
                android:text="Submit"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>